Deploy Cloud Functions (Livepeer streaming + Stripe payments) & wire all interactions
- Deploy 9 Cloud Functions: streaming (create/delete/status), recording (create/delete), payments (checkout/portal/cancel)
- Migrate from deprecated functions.config() to .env (deadline March 2026)
- Wire all interaction buttons: like, dislike, share, subscribe, comment, save, report
- Add interaction.service.ts for reactions, subscriptions, comments, saved items, reports
- Fix ProfileScreen cross-platform modals (replaced iOS-only Alert.prompt)
- Fix ChatContainer VirtualizedList nesting warning
- Update Firestore rules for viewer counts, reactions, comments, saved items
- Add composite index for chat messages
- Seed script with Admin SDK for test data
- Clean up 6 dead legacy .js stub files
- Fix firestore.indexes.json syntax error

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,11 @@ yarn-error.*
 
 # local env files
 .env*.local
+.env
+functions/.env
+
+# Firebase service account key (sensitive)
+serviceAccountKey.json
 
 # typescript
 *.tsbuildinfo
