--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@types/react": "~19.1.10",
+    "firebase-admin": "^13.6.1",
     "typescript": "^5.8.0"
   },
   "private": true
