--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "VibeTube",
     "slug": "ms-gift-project",
+    "scheme": "vibetube",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
